Fix some text bugs, fix z-index problems

--- a/src/BattlefieldObj/Label/Label.css
+++ b/src/BattlefieldObj/Label/Label.css
@@ -1,3 +1,11 @@
 .Label {
-    /* transform-origin: -50% -50%; */
+    transform-origin: 0 0%;
+    display: flex;
+}
+
+.Label p {
+    font-size: 14px;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
 }
