--- a/src/BattlefieldObj/Unit/Unit.css
+++ b/src/BattlefieldObj/Unit/Unit.css
@@ -1,4 +1,5 @@
 .Unit {
+    position: absolute;
     user-select: none;
     /* transform-origin: -50% -50%; */
 }
